# OpenPedra

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  check_connection.py  cli.py  config.json  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  block.py  invitation.py  problem.py  school.py  sector.py  user.py
backend/app/database/: connection.py
backend/app/models/: block.py  invitation.py  problem.py  school.py  sector.py  user.py
backend/app/serializers/: __init__.py  block.py  invitation.py  problem.py  school.py  sector.py  user.py
backend/app/services/: auth.py  initial_admin.py  sync.py  utils.py
backend/app/settings/: config.py
frontend/: Dockerfile  package.json  server.js
frontend/public/: block.html  map.html
frontend/scripts/: block-utils.js  block.js  map.js
frontend/styles/: block.css  map.css
